--- a/dev/history.pug
+++ b/dev/history.pug
@@ -7,7 +7,7 @@ block variables
 
 //- ИСТОРИЯ ЗАКАЗОВ
 block content
-  main.page-content
+  main.page-content.page-content--personal-area
       .page-inner.page-inner--w2
         .page-heading
           .row
@@ -17,7 +17,7 @@ block content
               .page-heading-title.page-heading-title_personal.uppercase= title            
 
             .col-md-8
-              .page-heading-title.border-top-gray.only-desktop &nbsp;
+              .page-heading-title1.border-top-gray.only-desktop &nbsp;
 
         .row
           .col-md-3.d-none.d-lg-block 
