--- a/dev/css/project.scss
+++ b/dev/css/project.scss
@@ -314,7 +314,8 @@ body {
 }
 
 header .header-logo img { 
-  z-index: 100000;
+  // z-index: 100000;
+  z-index: 10000;
 }
 
 .header-search-holder {
