--- a/dev/loyalty-card-empty.pug
+++ b/dev/loyalty-card-empty.pug
@@ -6,7 +6,7 @@ block variables
   //- - const activeLink = 'Карта лояльности'
 
 //- Карта лояльности
-block content
+block content.page-content--personal-area
   main.page-content
       .page-inner.page-inner--w2
         .page-heading
@@ -17,7 +17,7 @@ block content
               .page-heading-title.page-heading-title_personal.uppercase= title            
 
             .col-md-8
-            //-   .page-heading-title.border-top-gray.only-desktop &nbsp;
+            //-   .page-heading-title1.border-top-gray.only-desktop &nbsp;
 
         .row
           .col-md-3.d-none.d-lg-block 
