--- a/dev/loyalty-card.pug
+++ b/dev/loyalty-card.pug
@@ -7,7 +7,7 @@ block variables
 
 //- Карта лояльности
 block content
-  main.page-content
+  main.page-content.page-content--personal-area
       .page-inner.page-inner--w2
         .page-heading
           .row
