--- a/dev/order-cancel.pug
+++ b/dev/order-cancel.pug
@@ -17,7 +17,7 @@ block content
                 a.link.link--gray_border(href="dashboard.html") Личный кабинет
               .page-heading-title.page-heading-title_personal.uppercase отмена заказа
             .col-md-8
-              .page-heading-title.border-top-gray.only-desktop &nbsp;
+              .page-heading-title1.border-top-gray.only-desktop &nbsp;
 
         .row
             .col-md-3.d-none.d-lg-block 
