--- a/dev/scss/blocks/_filter.scss
+++ b/dev/scss/blocks/_filter.scss
@@ -95,7 +95,7 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
-    // gap: 20px;
+    gap: 10px;
 }
 
 .filters-list-small {
