--- a/dev/scss/blocks/_personal.scss
+++ b/dev/scss/blocks/_personal.scss
@@ -1,5 +1,44 @@
 @import '../variables';
 
+.page-content.page-content--personal-area {
+  // border: 1px solid red;
+  margin-top: 70px;
+
+  @media screen and (max-width:960px) {
+    margin-top: 30px;
+    margin-bottom: 0;
+  }
+
+  .page-heading {
+    margin-bottom: 50px;
+  }
+
+  .order-item-title {
+    margin-top: 0px;
+    margin-bottom: 20px;
+  }
+}
+
+.dashboard-title {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 25px;
+  text-transform: uppercase;
+
+  @media screen and (max-width:480px) {
+    font-size: 12px;
+    line-height: 20px;
+    text-transform: none;
+  }
+}
+
+.dashboard-enter {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 25px;
+  text-transform: uppercase;
+}
+
 .personal {
   display: flex;
   flex-direction: row;
@@ -64,7 +103,7 @@
 
     @media screen and (max-width:991px) {
       grid-template-columns: none;
-      
+
     }
   }
 
@@ -209,10 +248,11 @@
 .order-table .order-photo-holder {
   position: relative;
   // padding-top: 100%;
-  
-  @media screen and (min-width:480px){
-    width: 128px;
-    height: 191px;
+
+  @media screen and (min-width:480px) {
+    // width: 128px;
+    width: 100%;
+    // height: 191px;
 
   }
 }
@@ -223,7 +263,11 @@
 
 @media screen and (max-width:480px) {
 
-  .personal-blocks .col-lg-3.mb-lg-4:last-child {
+  .personal-blocks .col-lg-4.mb-lg-4:last-child a {
+    border-bottom: 1px solid transparent;
+  }
+
+  .personal-blocks .col-lg-4.mb-lg-4:last-child {
 
     a {
       text-decoration: underline;
@@ -235,4 +279,5 @@
 
     }
   }
+
 }
