add collection page and banner on it

--- a/dev/brand-large.pug
+++ b/dev/brand-large.pug
@@ -11,7 +11,8 @@ block content
     .page-inner.page-inner--w1.page-inner--mobile_empty
       include modules/filters/filterLarge
     .page-inner.page-inner--w2 
-      include modules/catalog-large 
+      #catalog-items.big-grid
+        include modules/catalog-large 
 
       //- .big-grid
       //-  .big-grid__item-double-center 
