--- a/dev/css/project-ann.scss
+++ b/dev/css/project-ann.scss
@@ -10,7 +10,7 @@
 @import'../scss/blocks/filter';
 @import '../scss/blocks/mobile-menu-filter';
 
-@import '../scss/blocks/mobile-slider';
+@import '../scss/blocks/mobile-slider'; 
 
 
 // переиспользуемые компоненты
@@ -44,6 +44,8 @@
 /* Личный кабинет */
 @import '../scss/blocks/loyalty-card';
 @import '../scss/blocks/big-grid';
+
+@import '../scss/blocks/banners';   
 
 
 
