--- a/dev/utils/data.pug
+++ b/dev/utils/data.pug
@@ -478,6 +478,12 @@
   const catalogStaticDress = [
         {title: 'ПЛАТЬЯ И КОМБИНЕЗОНЫ НОВОГО СЕЗОНА ДЛЯ ЖЕНЩИН', href:'#', lid: 'Подготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенков', text:'текст подробнее текст подробнее текст подробнее'},
         ]
+
+  //-  данные для баннера с 2-якартинками(two-img-text)
+  const bannersTwoImgText = [
+        {title: 'EAST WAY', href:'#', lid: 'Spring/Summer 2022', text:'С каждым сезоном анималистичные принты только набирают обороты. 100% вискоза и хлопок, яркие краски и знойный дух пустыни.'},
+        ]
+
   //- данные для фильтра стр brand.html
   const filterItems = [
         {name: 'Эко–кожа', href: '#'},
