--- a/dev/scss/blocks/_banners.scss
+++ b/dev/scss/blocks/_banners.scss
@@ -1,9 +1,8 @@
 @import '../variables';
 
 
-.banner-item-text {border:1px solid violet;
+.banner-item-text {
 
- 
     max-width: 760px;
     text-align: center;
     margin: 0 auto 30px auto;
