--- a/dev/css/project-ann.css
+++ b/dev/css/project-ann.css
@@ -3166,11 +3166,9 @@ ul.footer-top__list {
 .footer-form__form input {
   border: 1px solid #E1E1E1;
   border-right: 1px solid transparent;
-}
-
-.footer-form__form input {
   width: 100%;
   padding: 15px;
+  min-width: 190px;
 }
 
 .footer-form__form button {
@@ -5604,12 +5602,10 @@ ul.footer-top__list {
   }
 }
 .page-inner--banners {
-  border: 1px solid red;
   margin-bottom: 30px;
 }
 @media screen and (max-width: 480px) {
   .page-inner--banners {
-    border: 1px solid green;
     margin-bottom: 15px;
   }
 }
@@ -5659,7 +5655,6 @@ ul.footer-top__list {
 }
 
 .banner-item-text {
-  border: 1px solid violet;
   max-width: 760px;
   text-align: center;
   margin: 0 auto 30px auto;
