fix slider sizes

--- a/dev/modules/card-sizes-block.pug
+++ b/dev/modules/card-sizes-block.pug
@@ -3,12 +3,12 @@
   .slider-size__list 
     ul 
       li 
-        a(href='#') XS
+        a.basket-open(href='#') XS
       li 
-        a(href='#') S
+        a.basket-open(href='#') S
       li 
-        a(href='#') M
+        a.basket-open(href='#') M
       li 
-        a(href='#') L
+        a.basket-open(href='#') L
       li 
-        a(href='#') XL
+        a.basket-open(href='#') XL
