--- a/dev/modules/filters/filterLarge.pug
+++ b/dev/modules/filters/filterLarge.pug
@@ -15,17 +15,17 @@
   .filters-list
     a.mobile-filter-open(href='#') Фильтры(2)
   .filters-row__list.d-none.d-lg-block
-    ul.filters-list
-      li
-        a(href='#') Эко–кожа
-      li
-        a(href='#') вискоза / хлопок
-      li
-        a(href='#') Шерсть / кашемир
-      li
-        a(href='#') комбинезоны
-      li
-        a(href='#') Цвет
+    //- ul.filters-list
+    //-   li
+    //-     a(href='#') Эко–кожа
+    //-   li
+    //-     a(href='#') вискоза / хлопок
+    //-   li
+    //-     a(href='#') Шерсть / кашемир
+    //-   li
+    //-     a(href='#') комбинезоны
+    //-   li
+    //-     a(href='#') Цвет
   div
     ul.filters-list-small
       li
