--- a/dev/modules/messages/basket-empty.pug
+++ b/dev/modules/messages/basket-empty.pug
@@ -4,10 +4,10 @@
     | Добавьте товары в корзину, 
     br 
     | или 
-    a.link.link--black_border(href='#') авторизуйтесь
+    a.link.link--black_border(href='login.html') авторизуйтесь
     | ,
     br
     | чтобы увидеть выбранные товары.
 
   .row.justify-content-center
-    a.btn.btn--black.btn--medium(href='section.html') ПРОДОЛЖИТЬ ПОКУПКИ
+    a.btn.btn--black.btn--medium(href='#') ПРОДОЛЖИТЬ ПОКУПКИ
