--- a/dev/css/project-ann.css
+++ b/dev/css/project-ann.css
@@ -2580,6 +2580,7 @@ ul.disc {
   padding: 0 20px 10px 20px;
 }
 #auth-form .page-popup-title {
+  border: 1px solid red;
   font-size: 20px;
   line-height: 30px;
   margin-bottom: 20px;
