--- a/dev/scss/blocks/_form.scss
+++ b/dev/scss/blocks/_form.scss
@@ -39,7 +39,7 @@ ul.disc {
     padding: 0 20px 10px 20px;
   }
 
-  .page-popup-title {
+  .page-popup-title { border: 1px solid red;
     font-size: 20px;
     line-height: 30px;
     margin-bottom: 20px;
