--- a/dev/scss/blocks/_form.scss
+++ b/dev/scss/blocks/_form.scss
@@ -28,9 +28,9 @@ ul.disc {
       margin-bottom: 10px;
     }
 
-    .forgot-password {
-      padding: 0;
-    }
+    // .forgot-password {
+    //   padding: 0;
+    // }
 
 
   }
@@ -39,7 +39,7 @@ ul.disc {
     padding: 0 20px 10px 20px;
   }
 
-  .page-popup-title { border: 1px solid red;
+  .page-popup-title { 
     font-size: 20px;
     line-height: 30px;
     margin-bottom: 20px;
@@ -49,7 +49,7 @@ ul.disc {
     @media screen and (max-width: 480px) {
       font-size: 14px;
       line-height: 20px;
-      margin-bottom: 0;
+      // margin-bottom: 0;
     }
   }
 
