--- a/dev/modules/menus/basket-menu.pug
+++ b/dev/modules/menus/basket-menu.pug
@@ -11,6 +11,6 @@
           //- include ../basket/watching-with
       .basket-mobile-menu__footer
         .basket-mobile-menu__footer-links
-          .basket__title-link 4 Товара на сумму
-          .basket__title-link 6 900 РУБ.
+          .basket__title-link 1 Товар на сумму
+          .basket__title-link 12 500 РУБ.
         button.btn.btn--black.btn--medium.w100.max-w100(type='submit') Оформить заказ
