--- a/dev/css/project-ann.css
+++ b/dev/css/project-ann.css
@@ -4212,11 +4212,11 @@ ul.footer-top__list {
 
 .product-to-basket .product-list {
   display: flex;
-  gap: 20px;
 }
 
 .product-to-basket .product-list .product-list-link {
   border: 1px solid red;
+  margin-right: 20px;
 }
 
 .jcf-select-w100 {
