fix card total-look

--- a/dev/css/project-ann.css
+++ b/dev/css/project-ann.css
@@ -3777,12 +3777,13 @@ ul.footer-top__list {
 .order-table__item {
   display: flex;
   width: 100%;
-  gap: 20px;
 }
 
 .order-table__img {
+  border: 1px solid red;
   width: 100%;
   max-width: 127px;
+  margin-right: 20px;
 }
 
 .order-table__info {
@@ -4215,7 +4216,6 @@ ul.footer-top__list {
 }
 
 .product-to-basket .product-list .product-list-link {
-  border: 1px solid red;
   margin-right: 20px;
 }
 
@@ -4549,6 +4549,10 @@ ul.footer-top__list {
 .gallery__item .catalog-item__mobile {
   display: flex;
   gap: 10px;
+}
+.gallery__item .catalog-item__mobile .gallery__item-mobile-col {
+  border: 1px solid red;
+  margin-right: 10px;
 }
 @media screen and (max-width: 768px) {
   .gallery__item {
