--- a/dev/modules/menus/basket-menu.pug
+++ b/dev/modules/menus/basket-menu.pug
@@ -13,4 +13,5 @@
         .basket-mobile-menu__footer-links
           .basket__title-link 1 Товар на сумму
           .basket__title-link 12 500 РУБ.
-        button.btn.btn--black.btn--medium.w100.max-w100(type='submit') Оформить заказ
+        //- button.btn.btn--black.btn--medium.w100.max-w100(type='submit') Оформить заказ
+        a.btn.btn--black.btn--medium.w100.max-w100(href='basket.html' target='_blank') Оформить заказ
