--- a/dev/scss/blocks/_order.scss
+++ b/dev/scss/blocks/_order.scss
@@ -66,7 +66,7 @@
     // gap: 20px;
 }
 
-.order-table__img { border: 1px solid red;
+.order-table__img {
     width: 100%;
     max-width: 127px;
     margin-right: 20px;
