--- a/dev/basket.pug
+++ b/dev/basket.pug
@@ -9,7 +9,7 @@ block variables
 block content
   main.page-content
     .page-inner.page-inner--w2
-      .basket__header
+      .basket__page-header
         .row.align-items-end.justify-content-between
           .col-md-6
             .d-md-none.mb-3
