--- a/dev/layout/main-footer-light.pug
+++ b/dev/layout/main-footer-light.pug
@@ -16,7 +16,7 @@ html.no-js(lang='ru' prefix='og:http://ogp.me/ns#')
 
     .page
       include ../modules/page-note
-      include ../modules/header
+      include ../modules/header-light
 
       block content
 
