--- a/dev/search-empty.pug
+++ b/dev/search-empty.pug
@@ -14,6 +14,11 @@ block content
           include modules/messages/search-empty
           div.mb-30
 
+    .page-inner--w1.page-inner.mb-100px
+        .page-inner.page-inner--w2
+          .catalog
+            include modules/slider-you-also-like
+
     .page-inner--w1.page-inner.hidden-x
         .page-inner.page-inner--w2
           .catalog
