--- a/dev/modules/filter-sizes-block.pug
+++ b/dev/modules/filter-sizes-block.pug
@@ -1,7 +1,7 @@
 .mobile-filter-item-content
     //- a.link.link--black_border(href='#message-you-subscribed' data-popup='{"type":"inline"}') Сообщение об удачной подписке
-    a.mobile-filter__link.size-open(href='#') Руководство по размерам
-    //- a.link.link--black_border.size-open(href='#') Как подобрать размер
+    //- a.mobile-filter__link.size-open(href='#') Руководство по размерам
+    a.link.link--black_border.size-open(href='#') Как подобрать размер
     each size in sizes
       .filter-row.filter-row__size
         label.form-checkbox
