--- a/dev/modules/head.pug
+++ b/dev/modules/head.pug
@@ -25,7 +25,7 @@ head
   link(rel='stylesheet', type='text/css', media='screen', href='../css/plugins/datepicker.min.css')
 
   link(rel='stylesheet', type='text/css', media='screen', href='../css/project.css?v=11312')
-  link(rel='stylesheet', type='text/css', media='screen', href='../css/project-ann.css?v=797191')
+  link(rel='stylesheet', type='text/css', media='screen', href='../css/project-main.css?v=797191')
   link(rel='stylesheet', type='text/css', media='screen', href='../css/project.responsive.css?v=724611')
 
   //- link(rel='stylesheet', type='text/css', media='screen', href='../css/photoswipe.css?v=724611')
