--- a/dev/scss/blocks/_basket.scss
+++ b/dev/scss/blocks/_basket.scss
@@ -1,6 +1,10 @@
 @import '../variables';
 
 .basket {
+    &__page-header {
+        margin-bottom: 70px;  
+    }
+
     &__header {
         margin-bottom: 50px;
     }
@@ -113,15 +117,17 @@
 
     &__title {
         font-weight: 600;
-        font-size: 18px;
-
-        line-height: 25px;
-        margin-bottom: 30px;
+        font-size: 20px;
+        text-transform: uppercase;
+        line-height: 30px;
+        margin-bottom: 11px;
 
         @media screen and (max-width:480px) { 
             font-size: 14px;
             text-transform: uppercase;
             margin-bottom: 10px;
+            line-height: 20px;
+            margin-bottom: 5px;
         }
     }
 
