--- a/dev/scss/blocks/_order.scss
+++ b/dev/scss/blocks/_order.scss
@@ -200,6 +200,7 @@
     height: 50px;
     line-height: 50px;
     white-space: nowrap;
+    margin-left: 30px;
 
     @media screen and (max-width: 670px) {
         display: none;
