--- a/dev/login.pug
+++ b/dev/login.pug
@@ -46,7 +46,7 @@ block content
 
               .form-row
                 label.form-label(for='reg_pass1') Пароль
-                input#reg_pass1.form-item.form-item--password(type='password' name='reg_pass1' required='' data-validation='{"minlength": "6", "message": {"required": "", "minlength": "Длина пароля не меньше 6 символов"}}')
+                input#reg_pass1.form-item.form-item--password(type='password' name='reg_pass1' required='' data-validation='{"minlength": "6", "message": {"required": "", "minlength": "Минимальная длина пароля – 6 символов"}}')
                 span.password-show
 
               .form-row
