--- a/dev/scss/blocks/_form.scss
+++ b/dev/scss/blocks/_form.scss
@@ -39,7 +39,7 @@ ul.disc {
     padding: 0 20px 10px 20px;
   }
 
-  .page-popup-title { 
+  .page-popup-title {
     font-size: 20px;
     line-height: 30px;
     margin-bottom: 20px;
@@ -77,6 +77,7 @@ ul.disc {
 
 
 .reg-form {
+
   &__width {
     max-width: 500px;
     margin: auto;
@@ -84,6 +85,10 @@ ul.disc {
     @media screen and (max-width: 768px) {
       max-width: calc(100% - 2*30px);
     }
+  }
+
+  &__under-form-text {
+    margin-bottom: 50px;
   }
 
 }
@@ -254,4 +259,29 @@ ul.disc {
   -o-transform: scale(1.4);
   -ms-transform: scale(1.4);
   transform: scale(1.4);
+}
+
+.form-captcha-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+
+  .form-captcha-img {
+    width: 25%;
+  }
+
+  .form-captcha-reload {
+    display: block;
+    width: 28px;
+    min-width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    background: #121212 url(../svg/icon_load.svg) no-repeat center center;
+    background-size: 60%;
+    text-indent: -9999px;
+    cursor: pointer;
+    transition: 0.3s opacity cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  }
 }
